<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DiaCheck</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="password_error">The password must be at least 8 characters long</string>
    <string name="login_success">Login success</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_form">Form</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <string name="toolbar">Theme</string>
    <string name="no_news_found">No latest news</string>
    <string name="diacheck_error">Error</string>
    <string name="web_client_id">586500541485-gsa1kqu733kdo73jrb5o802hkvpkj2jr.apps.googleusercontent.com</string>

    <!-- Profile -->
    <string name="theme">Dark Mode</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="profile_user">Profile User</string>
    <string name="logout">Logout</string>

    <!-- Add Form -->
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hypertension">Do you have a history of high blood pressure? (hypertension)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="heart_disease">Do you have a history of heart disease?</string>
    <string name="bmi">What is your Body Mass Index (BMI)?</string>
    <string name="hba1c_level">What is your HbA1c level (average blood sugar level over the past 2–3 months)?</string>
    <string name="blood_glucose_level">"What is your blood glucose level (current blood sugar level)?"</string>
    <string name="submit">Submit</string>
    <string name="exit_app">Exit</string>

    <!-- History Form -->
    <string name="date">ddmmyyyy</string>
    <string name="description">Deskripsi</string>
    <string name="add_button">Add</string>
    <string name="title_add">Predict</string>
    <string name="title_detail">History</string>
    <string name="no_history_found">No History Found</string>

    <!-- Toolbar -->
    <string name="toolbar_title_right">Check</string>
    <string name="toolbar_title_left">Dia</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logo_diacheck">Logo DiaCheck</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an account!</string>
    <string name="login_here">Login Here!</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_detail_news">Detail News</string>
    <string name="title_result">Result</string>
    <string name="detail_news">News</string>
    <string name="edit_photo">Edit Foto</string>
    <string name="hello">"Welcome, "</string>
    <string name="daily_checklist">Daily Checklist</string>
    <string name="drank_water_8_glasses">Drank water (8 glasses)</string>
    <string name="light_exercise_30_minutes">Light exercise (30 minutes)</string>
    <string name="walked_8_000_steps">Walked 8,000 steps</string>
    <string name="stay_healthy">Stay Healthy!</string>
    <string name="text_notification">Your health matters! Check your diabetes risk regularly</string>
    <string name="save">Save</string>
    <string name="cancel">Cancl</string>
    <string name="time_news">time</string>
</resources>